[gd_scene load_steps=2 format=3 uid="uid://b8cjqxua5m58w"]

[ext_resource type="Script" uid="uid://c31yoflhnjg6n" path="res://ui/ui_script/message_bar.gd" id="1_1hv4b"]

[node name="MessageBar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_1hv4b")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ControlUp" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
mouse_filter = 2

[node name="ControlDown" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ControlDown"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/ControlDown/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HistoryBar" type="VBoxContainer" parent="VBoxContainer/ControlDown/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="Message1" type="Label" parent="VBoxContainer/ControlDown/VBoxContainer/ScrollContainer/HistoryBar"]
layout_mode = 2
mouse_filter = 1
text = "single message"

[node name="Message2" type="Label" parent="VBoxContainer/ControlDown/VBoxContainer/ScrollContainer/HistoryBar"]
layout_mode = 2
mouse_filter = 1
text = "multi message:
this is a test message"

[node name="InputBar" type="LineEdit" parent="VBoxContainer/ControlDown/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[connection signal="text_submitted" from="VBoxContainer/ControlDown/VBoxContainer/InputBar" to="." method="_on_input_bar_text_submitted"]
